# TODO_APP

./: .gitignore  .helmignore  CLAUDE.md  PROJECT_ANALYSIS_PHASE3_PHASE4.md  QUICK_COMPARISON.md  README.md  package-lock.json  package.json  token_refresh_test.js
.specify/memory/: constitution.md
charts/ai-service/: Chart.yaml  values.yaml
charts/backend/: values.yaml
charts/frontend/: values.yaml
history/001-ai-chatbot/: 0001-ai-chatbot-spec-creation.spec.prompt.md  (+3 more)
phase1/: README.md  main.py  pyproject.toml  requirements.txt
phase1/src/cli/: menu_navigator.py
phase1/src/lib/: console_interface.py
phase1/src/models/: task.py
phase1/src/services/: task_manager.py
phase1/tests/integration/: test_menu_flow.py
phase1/tests/unit/: test_task.py  test_task_manager.py
phase2/backend/: Dockerfile  (+3 more)
phase3/: README.md
phase3/ai-service/: .gitignore  Dockerfile  ai_mcp_server.py  guardrails.py  main.py  pyproject.toml  requirements.txt  todo_agent.py
phase3/ai-service/config/: config.py
phase4/: DOCKER_DEPLOYMENT_GUIDE.md  DOCKER_FIXES.md  DOCKER_MCP_FIX.md  ENV_CONFIGURATION_SUMMARY.md  NEON_DATABASE_SETUP.md  README.md  docker-compose.yml
phase4/backend/: .dockerignore  Dockerfile  README.md  pyproject.toml  verify_fixes.py
phase4/backend/api/v1/routes/: auth.py
phase4/backend/config/: settings.py
phase4/backend/models/: __init__.py  conversation.py  task.py  task_operation.py
phase4/backend/services/: conversation_cleanup.py  user_service.py
phase4/backend/tests/: test_backend.py
phase4/backend/tests/ai/: test_agent_integration.py  test_todo_agent_performance.py
phase4/backend/utils/: exception_handlers.py  logging.py
(+248 files in other folders)
