[project]
name = "todo-console-app"
version = "1.0.0"
description = "Interactive TODO Console Application with Arrow-Key Navigation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
todo-app = "src.main:main"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
]
